--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,18 @@
 <resources>
     <string name="app_name">Giphy Browser</string>
 
-    <!--    All No Data Fount Messages-->
-    <string name="message_no_internet_connection">No Internet Connection</string>
-    <string name="message_no_data_found">No Data Found</string>
-
     <!--Actions-->
     <string name="action_try_again">Try Again</string>
 
     <!--Text-->
     <string name="txt_gif_list">Gif List</string>
     <string name="txt_gif_full_view">Gif Full View</string>
+
+    <!--Message-->
+    <string name="message_something_went_wrong">Something went wrong</string>
+
+    <!--    All No Data Fount Messages-->
+    <string name="message_no_internet_connection">No Internet Connection</string>
+    <string name="message_no_data_found">No Data Found</string>
+
 </resources>
